--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tslib": "^2.0.0",
     "@angular-devkit/build-angular": "^0.1102.0",
     "@angular-devkit/build-ng-packagr": "~0.1002.0",
+    "@angular/animations": "^11.2.0",
     "@angular/cli": "^11.2.0",
     "@angular/common": "^11.2.0",
     "@angular/compiler": "^11.2.0",
@@ -71,6 +72,7 @@
     "tsickle": "^0.38.1",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5",
+    "uuid": "^9.0.1",
     "zone.js": "^0.10.2"
   }
 }
