--- a/tsconfig.es5.app.json
+++ b/tsconfig.es5.app.json
@@ -5,7 +5,7 @@
     "target": "es5",
     "types": []
   },
-  "files": ["src/main.ts", "src/polyfills.ts"],
+  "files": ["src/main.ts"],
   "include": ["src/**/*.ts"],
   "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
